clean up db driver versions