@@ -93,6 +93,8 @@ bootRun {
     systemProperties = System.properties
 
     def list = []
+    list.add("-XX:TieredStopAtLevel=1")
+    list.add("-Xverify:none")
     if (rootProject.enableRemoteDebugging) {
         list.add("-Xrunjdwp:transport=dt_socket,address=5000,server=y,suspend=n")
     }
